verteil-website-alignment- fixed

--- a/css/creative.css
+++ b/css/creative.css
@@ -687,3 +687,52 @@ h2{
 	width:535px!important;
 	box-shadow: 10px 10px 5px #888888;
 }
+
+@supports (-webkit-appearance:none) {
+	div #customerproposition  {
+        height: 560px !important
+    }
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+     /* IE10+ CSS styles go here */
+	 div #customerproposition  {
+        height: 561px !important
+    }
+}
+
+/*Chrome*/
+@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) { 
+	div #customerproposition  {
+        height: 598px!important;
+    }
+}
+/*Mozilla*/
+@-moz-document url-prefix() {
+    div #customerproposition  {
+        height: 562px!important;
+    }
+}
+/*safari*/
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+
+
+/* Safari only override */
+	::i-block-chrome,div #customerproposition  {
+        height:555px!important;
+    }
+}
+@media not all and (min-resolution:.001dpcm) { @media {
+
+    div #customerproposition  {
+        height:535px!important;
+    }
+}}
+/*Edge*/
+@media not all and (min-resolution:.001dpcm) { @media {
+
+    div #customerproposition  {
+        height:560px!important;
+    }
+}}
+
+
